@@ -336,7 +336,8 @@ HC121- GP function solvestep
    lfuncheckfeq        lfuninit            lfunqf              lfunzeros
    lfunconductor       lfunlambda          lfunrootres
    lfuncreate          lfunmfpeters        lfunsymsq
-  123- libpari nfispositive, idealextchinese
+  123- [libpari] nfispositive, idealextchinese
+JD124- [libpari] gp_read_str_multiline
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
